--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -118,6 +118,26 @@ form {
   text-align: center;
 }
 
+.progressBarContainer {
+  width: 100%;
+  height: 1rem;
+  border: solid 1px #FFFFFF30;
+  border-radius: 5px;
+}
+
+.progressBar {
+  width: 100%;
+  height: 100%;
+  background-color: #FFFFFF;
+  border-radius: 5px;
+  animation: progress 30s linear 0s;
+}
+
+@keyframes progress {
+  0% { width: 0%; }
+  100% { width: 100%; }
+}
+
 footer {
   display: flex;
   justify-content: flex-end;
